--- a/src/AwesomeBooks.Web/ClientApp/package.json
+++ b/src/AwesomeBooks.Web/ClientApp/package.json
@@ -32,6 +32,7 @@
     "ng-bootstrap-form-validation": "^2.1.0",
     "ngx-toastr": "^8.1.1",
     "rxjs": "^5.5.2",
+    "ssri": "^5.3.0",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
